--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
     <head>
         <meta charset="utf-8">
         <title>Minimal Vue App</title>
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     <body>
-        
+
+        <h1>Hello World</h1>
+
+
+        <!-- jQuery & Boostrap -->
+        <script src="js/src/jquery.min.js" charset="utf-8"></script>
+        <script src="js/src/bootstrap.min.js" charset="utf-8"></script>
+
+        <!-- Axios & Vue -->
+        <script src="js/src/axios.min.js" charset="utf-8"></script>
+        <!-- <script src="js/src/vue.min.js" charset="utf-8"></script> -->
+
+        <!-- Vue dev script -->
+        <script src="js/src/vue.dev.js" charset="utf-8"></script>
+
+        <!-- App -->
+        <script src="js/app.js" charset="utf-8"></script>
     </body>
 </html>
