--- a/index.html
+++ b/index.html
@@ -7,8 +7,34 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="/">Vue App</a>
 
-        <h1>Hello World</h1>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse">
+                    <div class="mr-auto"></div>
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Link</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div id="app">
+            <div class="container py-5">
+                <h1>Layout</h1>
+            </div>
+        </div>
 
 
         <!-- jQuery & Boostrap -->
