--- a/index.html
+++ b/index.html
@@ -32,9 +32,23 @@
 
         <div id="app">
             <div class="container py-5">
-                <h1>Layout</h1>
+                <h1>{{ page.title }}</h1>
+                <p class="lead">{{ page.subtitle }}</p>
+
+                <p>{{ page.p1 }}</p>
+                <p>{{ page.p2 }}</p>
+                <p>{{ page.p3 }}</p>
+
             </div>
         </div>
+
+        <footer class="jumbotron mb-0">
+            <div class="container">
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            </div>
+        </footer>
 
 
         <!-- jQuery & Boostrap -->
